# redwood

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  cli.py  cli.sh  config.yaml  main.py  pyproject.toml  redwood.desktop  redwood.example.yaml  run.sh  server.py  server.sh
.github/workflows/: _build.yaml  build.yaml  release.yaml  test.yaml
config/: __init__.py
database/: __init__.py  database.py
docs/: docker.md
mcp_client/: __init__.py
server/: __init__.py
src/: main.py
src/agent/: __init__.py
src/bump/: __init__.py
src/chat_engine/: __init__.py  chat_engine.py  display_interface.py
src/cli/: __init__.py
src/config/: __init__.py  redwood.example.yaml
src/database/: database.py
src/gui/: __init__.py
src/image_generator/: __init__.py
src/mcp_client/: __init__.py  sanitize.py
src/server/: __init__.py  command.py  mcptime.py  skills.py  storage.py  web_scraper.py
src/tools/: mcptime.py  web_scraper.py
src/ui/: __init__.py
test/: test_agent.py  test_bump.py  test_config.py  test_web_scraper.py
tests/: test_config.py  test_redwood.yaml
tools/: command.py  mcptime.py  storage.py
