[project]
name = "redwood"
version = "0.1.0"
description = "MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "beautifulsoup4>=4.14.3",
    "markdownify>=1.2.2",
    "pytest-asyncio>=1.3.0",
    "fastmcp>=3.2.4",
    "munch>=4.0.0",
    "google-genai>=1.73.1",
    "diskcache>=5.6.3",
    "pathvalidate>=3.3.1",
    "pillow>=12.1.1",
    "flet[all]>=0.84.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
cli = "cli:run"
gui = "gui:run"
server = "server:run"
agent = "agent:run"
image_generator = "image_generator:run"

[tool.setuptools.package-data]
config = ["*.yaml"]

# Flet Packaging

[tool.flet.app]
path = "src"
product = "Redwood"
artifact = "Redwood"
exclude = [".git", ".venv"]

[tool.flet.splash]
color = "#ffffff"
dark_color = "#333333"

[tool.flet.app.boot_screen]
show = true
message = "Preparing Redwood for its first launch..."

[tool.flet.app.startup_screen]
show = true
message = "Starting Redwood..."
